examples/test/testpolicy8060.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8060
  namespace: namespace163
spec:
  podSelector:
    matchLabels:
      key43: value14
      key37: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value6
          key20: value9
          key43: value37
      podSelector:
        matchLabels:
          key34: value2
          key11: value38
          key2: value26
